--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/appsettings.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/appsettings.json
@@ -8,17 +8,17 @@
     }
   },
   "service": {
-    "timewarp-blazor-server": {
+    "web-server": {
       "protocol": "https",
       "host": "localhost",
       "port": "5001"
     },
-    "timewarp-blazor-api": {
+    "api-server": {
       "protocol": "https",
       "host": "localhost",
       "port": "5001"
     },
-    "timewarp-blazor-grpcserver": {
+    "grpc-server": {
       "protocol": "https",
       "host": "localhost",
       "port": "7227"
