--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/appsettings.Development.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/appsettings.Development.json
@@ -14,17 +14,17 @@
     "DocumentToCheck": ""
   },
   "service": {
-    "timewarp-blazor-server": {
+    "web-server": {
       "protocol": "https",
       "host": "localhost",
       "port": "5001"
     },
-    "timewarp-blazor-api": {
+    "api-server": {
       "protocol": "https",
       "host": "localhost",
       "port": "5001"
     },
-    "timewarp-blazor-grpcserver": {
+    "grpc-server": {
       "protocol": "https",
       "host": "localhost",
       "port": "7227"
