--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/TimeWarp.Architecture.Testing/TimeWarp.Architecture.Testing.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/TimeWarp.Architecture.Testing/TimeWarp.Architecture.Testing.csproj
@@ -7,15 +7,12 @@
   </ItemGroup>
   <ItemGroup>
     <!--<ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" />-->
-    <ProjectReference Include="..\..\Source\Server\TimeWarp.Blazor.Server.csproj" />
+    <ProjectReference Include="..\..\Source\Server\TimeWarp.Architecture.Server.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Note that this is not a "normal" ProjectReference.
          It needs the additional 'OutputItemType' and 'ReferenceOutputAssembly' attributes. -->
-    <ProjectReference
-      Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj"
-      OutputItemType="Analyzer"
-      ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 </Project>
