--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Client.Integration.Tests/TimeWarp.Architecture.Client.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Client.Integration.Tests/TimeWarp.Architecture.Client.Integration.Tests.csproj
@@ -7,7 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Spa\TimeWarp.Architecture.Client.csproj" />
+    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Spa\Web.Spa.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\TimeWarp.Architecture.Server.csproj" />
     <ProjectReference Include="..\TimeWarp.Architecture.Testing\TimeWarp.Architecture.Testing.csproj" />
   </ItemGroup>
