--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
@@ -46,7 +46,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Web.Spa\Web.Spa.csproj" />
-    <ProjectReference Include="..\Web.Shared\TimeWarp.Architecture.Shared.csproj" />
+    <ProjectReference Include="..\Web.Shared\Web.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
