--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Client.Integration.Tests/TimeWarp.Architecture.Client.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Client.Integration.Tests/TimeWarp.Architecture.Client.Integration.Tests.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Spa\Web.Spa.csproj" />
-    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\TimeWarp.Architecture.Server.csproj" />
+    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
     <ProjectReference Include="..\TimeWarp.Architecture.Testing\TimeWarp.Architecture.Testing.csproj" />
   </ItemGroup>
 
