--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Server.Integration.Tests/TimeWarp.Architecture.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Server.Integration.Tests/TimeWarp.Architecture.Server.Integration.Tests.csproj
@@ -5,8 +5,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\TimeWarp.Architecture.Server.csproj" />
-    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Shared\TimeWarp.Architecture.Shared.csproj" />
+    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
+    <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Shared\Web.Shared.csproj" />
     <ProjectReference Include="..\TimeWarp.Architecture.Testing\TimeWarp.Architecture.Testing.csproj" />
   </ItemGroup>
 </Project>
