--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Shared/Web.Shared.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Shared/Web.Shared.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Api\Api.Contracts\TimeWarp.Architecture.Api.Contracts.csproj" />
+    <ProjectReference Include="..\..\Api\Api.Contracts\Api.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
