--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/Web.Spa.csproj
@@ -32,7 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\..\..\..\..\blazor-state\Source\BlazorState\BlazorState.csproj" />
-    <ProjectReference Include="..\..\Api\Api.Contracts\TimeWarp.Architecture.Api.Contracts.csproj" />
+    <ProjectReference Include="..\..\Api\Api.Contracts\Api.Contracts.csproj" />
     <ProjectReference Include="..\..\Grpc\Grpc.Contracts\Grpc.Contracts.csproj" />
     <ProjectReference Include="..\Web.Shared\Web.Shared.csproj" />
     <ProjectReference Include="..\TypeScript\TimeWarp.Architecture.TypeScript.csproj" />
