--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,4 @@ ASALocalRun/
 /Source/TimeWarp.Blazor.Template/templates/Feature.CrudComponents/.template.config/icon.png
 /Source/TimeWarp.Blazor.Template/templates/Feature.CrudComponents/.template.config/template.json
 /Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Documentation/C4/
+/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Spa/wwwroot/css/site.css
