--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -22,8 +22,6 @@
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.152" />
-    <PackageVersion Include="System.ServiceModel.Primitives" Version="4.9.0" />
-    
     <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.4.0" />       
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" />
@@ -43,7 +41,7 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
     <PackageVersion Include="Microsoft.Playwright" Version="1.19.1" />
     <PackageVersion Include="Microsoft.Tye.Extensions.Configuration" Version="0.10.0-alpha.21420.1" />
-    
+    <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />    
     <PackageVersion Include="Oakton" Version="4.1.0" />
     <PackageVersion Include="PeterLeslieMorris.Blazor.FluentValidation" Version="1.7.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.3.0" />
@@ -54,9 +52,7 @@
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.0" />
     <PackageVersion Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="6.0.0" />
+    <PackageVersion Include="System.ServiceModel.Primitives" Version="4.9.0" />    
     <PackageVersion Include="Yarp.ReverseProxy" Version="1.0.0"/>
-
-    <PackageVersion Include="Selenium.Support" Version="3.141.0" />
-    <PackageVersion Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 </Project>
