--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Tye/tye.yaml
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/DevOps/Tye/tye.yaml
@@ -6,38 +6,12 @@
 #
 name: timewarp.architecture
 services:
-#- name: cosmosdb
-#  image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
-#  bindings:
-#  - port: 8081
-#    name: cosmosdb-ui
-#    protocol: https
-#  - port: 8900
-#    name: cosmosdb-8900
-#  - port: 8901
-#    name: cosmosdb-8901
-#  - port: 8979   
-#    name: cosmosdb-8979
-#  - port: 10250
-#    name: cosmosdb-10250
-#  - port: 10251
-#    name: cosmosdb-10251
-#  - port: 10252
-#    name: cosmosdb-10252
-#  - port: 10253
-#    name: cosmosdb-10253
-#  - port: 10254
-#    name: cosmosdb-10254
-#  - port: 10350
-#    name: cosmosdb-10350
-
     
 - name: web-server
   project: ../../Source/ContainerApps/Web/Web.Server/Web.Server.csproj
   bindings:
   - port: 5001
     protocol: https
-
 
 - name: grpc-server
   project: ../../Source/ContainerApps/Grpc/Grpc.Server/Grpc.Server.csproj
@@ -55,7 +29,7 @@ services:
   - port: 7255
     protocol: https
 
-- name: proxy
+- name: yarp
   project: ../../Source/ContainerApps/Yarp/Yarp.csproj
   bindings:
   - port: 8443
