Update path of nupkg

--- a/.github/workflows/timewarp-architecture.yml
+++ b/.github/workflows/timewarp-architecture.yml
@@ -39,4 +39,4 @@ jobs:
           cd Source/TimeWarp.Architecture.Template/
           dotnet build -c Release
       - name: Publish
-        run: dotnet nuget push Source/TimeWarp.Architecture.Template/bin/Release/*.nupkg --skip-duplicate --no-symbols true
+        run: dotnet nuget push ./bin/Release/*.nupkg --skip-duplicate --no-symbols true
