--- a/.github/workflows/timewarp-architecture.yml
+++ b/.github/workflows/timewarp-architecture.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           dotnet-version: 6.0.x
         env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}     # <-- This is the token for the GitHub account you want to use.
+          NUGET_AUTH_TOKEN: ${{secrets.PUBLISH_TO_NUGET_ORG}}     # <-- This is the token for the GitHub account you want to use.
 
       - name: Pack
         run: |
