--- a/.github/workflows/timewarp-architecture.yml
+++ b/.github/workflows/timewarp-architecture.yml
@@ -35,4 +35,4 @@ jobs:
           cd Source/TimeWarp.Architecture.Template/
           dotnet build -c Release
       - name: Publish
-        run: dotnet nuget push bin/Release/TimeWarp.Architecture.1.0.0.nupkg --skip-duplicate --no-symbols true --api-key ${{secrets.PUBLISH_TO_NUGET_ORG}}
+        run: dotnet nuget push bin/Release/TimeWarp.Architecture.1.0.0.nupkg --skip-duplicate --no-symbols true --source https://api.nuget.org/v3/index.json --api-key ${{secrets.PUBLISH_TO_NUGET_ORG}}
