Update the docs and a little clean up

--- a/Documentation/toc.yml
+++ b/Documentation/toc.yml
@@ -1,5 +1,5 @@
 ﻿# auto-generated
-- name: TimeWarp-Blazor Template Overview
-  topicUid: TimeWarp.Blazor.Template:Overview
+- name: TimeWarp-Architecture Template Overview
+  topicUid: TimeWarp.Architecture.Template:Overview
 - name: TimeWarp-Console Template Overview
   topicUid: TimeWarp.Console.Template:Overview
