--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.SourceCodeGenerators.Tests/SourceCodeGenerators.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.SourceCodeGenerators.Tests/SourceCodeGenerators.Tests.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" />
-    <ProjectReference Include="..\TimeWarp.Architecture.Testing\Testing.Common.csproj" />
+    <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
   </ItemGroup>
 
   <!--<ItemGroup>
