--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Server.Integration.Tests/Web.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Server.Integration.Tests/Web.Server.Integration.Tests.csproj
@@ -7,6 +7,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Shared\Web.Shared.csproj" />
-    <ProjectReference Include="..\TimeWarp.Architecture.Testing\Testing.Common.csproj" />
+    <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
   </ItemGroup>
 </Project>
