--- a/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
+++ b/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <PackageType>Template</PackageType>
     <PackageId>TimeWarp.Architecture</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+    <PackageLicenseExpression>Unlicense</PackageLicenseExpression>
     <Title>TimeWarp Architecture</Title>
     <Authors>Steven T. Cramer</Authors>
     <Description>TimeWarp Architecture Templates</Description>
