Add reference to Readme in csproj for template

--- a/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
+++ b/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
@@ -10,6 +10,7 @@
     <Description>TimeWarp Architecture Templates</Description>
     <PackageTags>dotnet-new;templates;aspnet;blazor;spa;pwa;timewarp;gRPC;Tye;YARP</PackageTags>
     <PackageIcon>logo.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TargetFramework>net6.0</TargetFramework>
     <IncludeContentInPack>true</IncludeContentInPack>
