--- a/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
+++ b/Source/TimeWarp.Architecture.Template/TimeWarp.Architecture.csproj
@@ -34,7 +34,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\..\assets\Logo.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\Assets\Logo.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
