--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.editorconfig
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/.editorconfig
@@ -116,7 +116,7 @@ csharp_style_unused_value_expression_statement_preference = discard_variable:sil
 csharp_using_directive_placement = inside_namespace:suggestion
 
 # Namespace preferences
-csharp_style_namespace_declarations = file_scoped:warning
+csharp_style_namespace_declarations = file_scoped:error
 
 #### C# Formatting Rules ####
 
