Move code out of Web.Shared into TimeWarp.OptionsValidation
Move Validation from IServiceCollection Extension to IServiceProvider Extension that takes a IServiceCollection.  This requires that that the serviceprovide has already been built and access the values won't just be disposed but instead kept.
Clean up other naming

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Source/ContainerApps/Web/Web.Server/Web.Server.csproj
@@ -12,7 +12,6 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants></DefineConstants>
-    <!-- <DefineConstants>UseHttpSys</DefineConstants> -->
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -45,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\Common.csproj" />
     <ProjectReference Include="..\Web.Spa\Web.Spa.csproj" />
     <ProjectReference Include="..\Web.Shared\Web.Shared.csproj" />
   </ItemGroup>
@@ -52,6 +52,10 @@
   <ItemGroup>
     <Folder Include="Entities\X_Aggregate\Requests\" />
     <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Web.Server.Integration.Tests" />
   </ItemGroup>
 
 </Project>
