Emit GeneratedFiles for review.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Build.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Build.props
@@ -17,6 +17,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <!-- We use full (Windows PDBs) until cross platform support for source link will get better -->
     <DebugType>full</DebugType>
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
   </PropertyGroup>
 
   <Target Name="EmbedLocal" BeforeTargets="PrepareForBuild">    
