--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Directory.Packages.props
@@ -3,26 +3,26 @@
     <PackageVersion Include="AutoMapper" Version="11.0.1" />
     <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageVersion Include="BlazorComponentUtilities" Version="1.8.0" />
-    <PackageVersion Include="Blazor-State" Version="5.0.0-beta.0" />
+    <PackageVersion Include="Blazor-State" Version="5.0.3" />
     <PackageVersion Include="Dawn.Guard" Version="1.12.0" />
     <PackageVersion Include="FakeItEasy" Version="7.3.1" />
     <PackageVersion Include="Fixie" Version="3.2.0" />
     <PackageVersion Include="Fixie.TestAdapter" Version="3.2.0" />
-    <PackageVersion Include="FluentAssertions" Version="6.5.1" />
+    <PackageVersion Include="FluentAssertions" Version="6.6.0" />
     <PackageVersion Include="FluentValidation" Version="10.4.0" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="10.4.0" />
-    <PackageVersion Include="Grpc.AspNetCore" Version="2.43.0" />
-    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.43.0" />
-    <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.43.0" />
-    <PackageVersion Include="Grpc.Net.Client" Version="2.43.0" />
-    <PackageVersion Include="Grpc.Net.Client.Web" Version="2.43.0" />
+    <PackageVersion Include="Grpc.AspNetCore" Version="2.44.0" />
+    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.44.0" />
+    <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.44.0" />
+    <PackageVersion Include="Grpc.Net.Client" Version="2.44.0" />
+    <PackageVersion Include="Grpc.Net.Client.Web" Version="2.44.0" />
     <PackageVersion Include="MediatR" Version="10.0.1" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageVersion Include="protobuf-net.Grpc" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.152" />
-    <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.4.0" />    
+    <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.5.0" />    
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.3" />
@@ -41,7 +41,7 @@
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.3" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
-    <PackageVersion Include="Microsoft.Playwright" Version="1.19.1" />
+    <PackageVersion Include="Microsoft.Playwright" Version="1.20.2" />
     <PackageVersion Include="Microsoft.Tye.Extensions.Configuration" Version="0.10.0-alpha.21420.1" />
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.2" />    
     <PackageVersion Include="Oakton" Version="4.1.0" />
