--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.Testing/Testing.Common.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/TimeWarp.Testing/Testing.Common.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Server\Api.Server.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Web\Web.Server\Web.Server.csproj" />
+    <ProjectReference Include="..\..\Source\ContainerApps\Yarp\Yarp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
