When running the tests all the projects are merged together and served from one folder so I needed to create a merged appsettings.json
hopefully it all works.

--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Web.Spa.Integration.Tests/Web.Spa.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Web.Spa.Integration.Tests/Web.Spa.Integration.Tests.csproj
@@ -15,4 +15,10 @@
   <ItemGroup>
     <Folder Include="Configuration\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
