--- a/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Architecture.Template/templates/TimeWarp.Architecture/Tests/Api.Server.Integration.Tests/Api.Server.Integration.Tests.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Server\Api.Server.csproj" />
     <ProjectReference Include="..\..\Source\ContainerApps\Api\Api.Contracts\Api.Contracts.csproj" />
+    <ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" />
     <ProjectReference Include="..\TimeWarp.Testing\Testing.Common.csproj" />
   </ItemGroup>
 
